--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <div class="left">
                 <img src="Images/miladicode.png" alt="logo">
-                <h1 style="color: white;"><span style="color:#72a1de68;">Jinkalwar</span>Taterao</h1>
+                <h1 style="color: white;"><span style="color:#72a1de68;">Taterao</span>Coder</h1>
             </div>
             <ul>
                 <li><a href="">About</a></li>
@@ -57,27 +57,27 @@
         </section>
         <section class="info-section">
             <h1 style="margin-left: 270px;" class="section-title autoDisplay">Hello, There 👋</h1>
-            <div class="info-cards">
-                <div class="card">
+            <div class="info-cards ">
+                <div class="card fadeInRight">
                     <img src="Images/grid1.png" alt="card-image">
                     <h1>Hi, There I'm Taterao</h1>
                     <p>With 1.5 years of Experience, I have honed my skills in both Fronted and Backend Developement, creating dynamic and Responsive websites</p>
                 </div>
 
-                <div class="card">
+                <div class="card fadeInRight">
                     <img src="Images/grid2.png" alt="card-image">
                     <h1>Tech stack</h1>
                     <p> I specialize in a veriety of languages, frameworks, and tools that allow me to  build robust and scalable applications</p>
                 </div>
 
-                <div  class="card">
+                <div  class="card fadeInRight">
                     <video  loop autoplay muted plays-online src="videos/glob.mp4" type="video/mp4"></video>
                     <h1>I'm very Flexible with Time zone communication and locations</h1>
                     <p>I'm Base in India,Hyderabad. Open to Remote work worldwide. </p>
                     <button > <i class='bx bx-link-external' ></i>Contact Me</button>
                 </div>
 
-                <div class="card">
+                <div class="card fadeInRight">
                     <img src="Images/grid4.png" alt="card-image">
                     <h1>My Passion for Coding</h1>
                     <p>I love Solving problems and building thing with coding. Prommaing isn't jus my Profession-it my Passion. I Enjoy Exploring New Technologies, and enhancing my skills.</p>
@@ -91,7 +91,7 @@
                 My Projects 🏢
             </h1>
 
-            <div class="project-card">
+            <div class="project-card fadeInRight">
                 <div class="project-vidbox autoBlur">
                     <video id="projectVideo1" src="videos/project1.mp4" preload="auto"></video>
                 </div>
@@ -102,7 +102,7 @@
                     <button > <i class='bx bx-link-external' ></i>Live Website</button>
                 </div>
             </div>
-            <div class="project-card">
+            <div class="project-card fadeInRight">
                 <div class="project-vidbox autoBlur">
                     <video  id="projectVideo2" src="videos/project2.mp4" preload="auto"></video>
                 </div>
@@ -118,7 +118,7 @@
                     <button > <i class='bx bx-link-external' ></i>Live Website</button>
                 </div>
             </div>
-            <div class="project-card">
+            <div class="project-card fadeInRight">
                 <div class="project-vidbox autoBlur">
                     <video id="projectVideo3" src="videos/project3.mp4" preload="auto" ></video>
                 </div>
@@ -129,7 +129,7 @@
                     <button > <i class='bx bx-link-external' ></i>Live Website</button>
                 </div>
             </div>
-            <div class="project-card">
+            <div class="project-card fadeInRight">
                 <div class="project-vidbox autoBlur">
                     <video id="projectVideo4" src="videos/project1.mp4" preload="auto"></video>
                 </div>
@@ -145,17 +145,17 @@
             <h1 class="section-title autoDisplay">
                 My Skills 💪
             </h1>
-            <div class="skills-box">
+            <div class="skills-box fadeInRight">
                 <img src="Images/digital brain.png" alt="" class="skills-image">
 
-                <div class="designer">
+                <div class="designer fadeInRight">
                     <h1 class="gradient">Designer<i class='bx bx-laptop'></i></h1>
                     <p>I have expertise in HTML, CSS, JavaScript, and design tools line Figma. 
                         My strength lies in blending aesthetics with functionality to create seamless user experiences.</p>
 
 
                 </div>
-                <div class="coder">
+                <div class="coder fadeInRight">
                     <h1 class="gradient">Coder <i class='bx bx-code-alt' ></i></h1>
                     <p>I'm skilled in HTML, CSS, JavaScript, Tailwind CSS and frameworks like Reactjs and node.js. 
                         I also have experiences with database management using MongoDB and Mysql, sql</p>
