tablet responsive over

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
                 <img src="Images/miladicode.png" alt="logo">
                 <h1 style="color: white;"><span style="color:#72a1de68;">Taterao</span>Coder</h1>
             </div>
-            <ul>
+
+            <div class="menu-toggle" onclick="toggleMenu()">
+                <i class='bx bx-menu'></i>
+            </div>
+
+            <ul class="nav-links">
                 <li><a href="">About</a></li>
                 <li><a href="">Skills</a></li>
                 <li><a href="">Projects</a></li>
@@ -90,7 +95,7 @@
             <h1 class="section-title autoDisplay">
                 My Projects 🏢
             </h1>
-
+           
             <div class="project-card fadeInRight">
                 <div class="project-vidbox autoBlur">
                     <video id="projectVideo1" src="videos/project1.mp4" preload="auto"></video>
