--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         </section>
         <section class="info-section">
-            <h1 style="margin-left: 270px;" class="section-title autoDisplay">Hello, There 👋</h1>
+            <h1 class="section-title autoDisplay">Hello, There 👋</h1>
             <div class="info-cards ">
                 <div class="card fadeInRight">
                     <img src="Images/grid1.png" alt="card-image">
